Some pics (TMP) about p, q, F

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -2,12 +2,7 @@
 
 \section{Методы поиска}
 
-\subsection{Основные параметры поиска}
-
-
-\subsubsection{Общие свойства объектов с точки зрения идентификации}
-
-\subsubsection{Априорная и текущая информация}
+\subsection{Априорная и текущая информация}
 
 Без априорной информации невозможно построение
 работоспособной системы идентификации. Основные
@@ -19,7 +14,7 @@
 идентифицируемой системы, а также
 требуемая точность и скорость идентификации
 (могут быть заданы различными способами).
-В этот список входи и максимальная скорость изменения параметра.
+В этот список может входить и максимальная скорость изменения параметра.
 В процессе работы эти параметры могут уточнятся по текущей информации.
 
 Следующую часть априорной (по отношению к идентификации) информации
@@ -33,86 +28,12 @@
 
 
 
-\subsection{Время и история}
 
-Способы учёта истории системы и динамических характеристик.
+\subsection{Основные параметры поиска}
+
+xxx
 
 \subsection{ Использование множества моделей / агентов}
-
-
-\subsubsection{Один агент}
-
-Единственный неподвижный агент практически не имеет смысла
-с точки зрения синтеза системы идентификации.
-Он может сигнализировать о том, что в пределах
-\(\tau\) модель была или не была достаточно адекватна
-объекту.
-
-Наличие истории и возможность перемещаться дают возможность
-построить систему идентификации и на одном агенте.
-В качестве истории могут использоваться, в том числе,
-динамические свойства идентифицируемого объекта
-(оригинальный метод АПИ). Также могут быть
-применены интегрирующие элементы агента идентификации
-(синхронный детектор, \ldots).
-
-\subsubsection{Пара агентов}
-
-Пара агентов, взаимодействующая между собой,
-способна оценить градиент функции качества,
-и, следовательно, обеспечить смещение в требуемом направлении.
-
-С учетом глобальной информации возможна адаптация параметров пары.
-В свою очередь, информация, полученная от пары может
-использоваться для уточнения глобальных параметров.
-
-\subsubsection{Триплет агентов}
-
-Три соседних агента, взаимодействующие между собой,
-способны не только оценить градиент функции качества в своей окрестности,
-но и определить (опять же, оценочно) наличие там максимума.
-
-\subsubsection{Ансамбль агентов}
-
-\subsection{Адаптация}
-
-\Cmt{
-Какие параметры системы идентификации можно адаптировать
-и на каком уровне.
-
-Когда имеет смысл играть с чувствительностью.
-
-Как близко имеет смысл подводить модели к экстремуму?
-}
-
-
-Стабильные/мобильные модели.
-
-История: локальная + глобальная
-
-\subsection{Качество идентификации}
-
-\Cmt{Расширить из кандидатской с учётом времени и множества моделей.}
-
-Процесс поисковой идентификации заключается в настройке параметров одной
-или нескольких моделей, анализу критериев идентификации
-(или соответствующих функций качества), и оцениванию по этой информации
-значения идентифицируемого параметра. При использовании в целях идентификации нескольких моделей,
-появляются общие действия, применяемые к каждой из них.
-
-Рассмотрим одномерный случай.
-Пусть задан объект $ \mathbf{O} $, и $N$ моделей:
-$ \mathbf{M}_0 \ldots \mathbf{M}_{N-1} $.
-На вход как объекта, так и каждой из моделей подаётся (при необходимости)
-входной сигнал $u(t)$. Выход моделей $x_{mi}(t)$ измеряется точно,
-а объекта $x_o(t)$ -- с определённой, наперёд неизвестной помехой $w(t)$. При необходимости искусственную помеху
-со сходными характеристиками можно подмешивать и к выходу моделей.
-Обозначим $q_o(t)$ -- текущее значение критерия для
-объекта, $q_{mi}(t)$ -- для $i$-той модели.
-Соответственно $p_o(t)$ -- значение параметра для объекта,
-$p_{mi}(t)$ -- для $i$-той модели.
-
-
 
 Определение: \textbf{поисковый агент} -- это динамическая система, получающая выходной ($x(t)$),
 и, при необходимости входной сигнал ($u(t)$) от одной или нескольких моделей,
@@ -141,7 +62,7 @@ $p_{mi}(t)$ -- для $i$-той модели.
 вместо простого индекса $i$ могут применяется составные.
 
 В простейших случаях возможно построение системы идентификации
-с одной моделью, и соответственно одним поисковым агентом.
+с одной моделью и, соответственно, одним поисковым агентом.
 Примерами такого похода могут служить
 метод синхронного детектора \cite{adopt_cont_sys}
 и оригинальный адаптивно-поисковый метод \cite{mich_92}.
@@ -162,9 +83,9 @@ $p_{mi}(t)$ -- для $i$-той модели.
 идентифицируемого параметра. Поэтому, использование множества
 поисковых агентов может кардинально уменьшить время идентификации.
 
-Каждый поисковый агент, определяя величину $q_{mi}(t)$ , и получая $q_o(t)$,
+Каждый поисковый агент, определяя величину $q_{i}(t)$ , и получая $q_o(t)$,
 вычисляет безразмерную функцию качества идентификации
-$F(q_o,q_m)$.
+$F(q_o,q_i)$.
 
 С учётом обозначения
 %
@@ -203,8 +124,9 @@ $F(q_o,q_m)$.
 Для всех рассмотренных функций $q_\gamma$ -- величина, обратная чувствительности
 функции качества, задаёт масштаб и рабочий диапазон функции качества (рис.~\ref{atu:f:F_types}).
 При этом, при необходимости, значения этих функций могут быть искусственно ограничены диапазоном $[0;1]$.
-Каждая имеет свой набор преимуществ и недостатков~\cite{atu_ISDMCI2016}. В данной работе используется
-функция (\ref{atu:eq:F_gauss}).
+Каждая имеет свой набор преимуществ и недостатков~\cite{atu_ISDMCI2016}.
+% В данной работе используется функция (\ref{atu:eq:F_gauss}).
+% TODO: all, paste from atu_ISDMCI2016
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=45\TW]{p/F_types.png} }
@@ -221,6 +143,92 @@ $F(q_o,q_m)$.
 а координаты выбираются за пределами рабочего диапазона поиска.
 
 
+\subsubsection{Один агент}
+
+Единственный неподвижный агент практически не имеет смысла
+с точки зрения синтеза системы идентификации.
+Он может сигнализировать о том, что в пределах
+\(\tau\) модель была или не была достаточно адекватна
+объекту.
+
+Наличие истории и возможность перемещаться дают возможность
+построить систему идентификации и на одном агенте.
+В качестве истории могут использоваться, в том числе,
+динамические свойства идентифицируемого объекта
+(оригинальный метод АПИ). Также могут быть
+применены интегрирующие элементы агента идентификации
+(синхронный детектор, \ldots).
+
+\subsubsection{Пара агентов}
+
+Пара агентов, взаимодействующая между собой,
+способна оценить градиент функции качества,
+и, следовательно, обеспечить смещение в требуемом направлении.
+
+С учетом глобальной информации возможна адаптация параметров пары.
+В свою очередь, информация, полученная от пары может
+использоваться для уточнения глобальных параметров.
+
+\subsubsection{Триплет агентов}
+
+Три соседних агента, взаимодействующие между собой,
+способны не только оценить градиент функции качества в своей окрестности,
+но и определить (опять же, оценочно) наличие там максимума.
+
+\paragraph{Идеальный случай}
+
+Пусть зависимость $q(p)$ задана самым простым и благоприятным для идентификации способом:
+%
+\[
+  q(p) = p_0 + b_p p .
+\]
+Шумы измерения и прочие помехи отсутствуют.
+Рассмотрим 3 соседних поисковых агента: $A_l$, $A_c$, $A_r$.
+Тогда, если $p_o \in [ p_l, p_r ] $, оценка положения
+идентифицируемого параметра $p_e$, выполненная агентом $A_c$,
+должна совпадать с реальным значением параметра объекта: $p_e = p_o $.
+Если $p_o \notin [ p_l, p_r ] $, то конкретное расположение
+$p_e$ значения не имеет, достаточно потребовать определения направления
+этого расположения относительно диапазона. % TODO: и может быть чего-то ещё для адаптации
+
+
+% TODO: full rewrite,
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{pq_1x2.png} }
+  \caption{ $q(p)$, $F(q(p))$, part1 }
+  \label{atu:pq_1x2}
+\end{figure}
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{pq_2x8.png} }
+  \caption{$q(p)$, $F(q(p))$, part2 }
+  \label{atu:pq_2x8}
+\end{figure}
+
+\subsubsection{Ансамбль агентов}
+
+\subsection{Адаптация}
+
+\Cmt{
+Какие параметры системы идентификации можно адаптировать
+и на каком уровне.
+
+Когда имеет смысл играть с чувствительностью.
+
+Как близко имеет смысл подводить модели к экстремуму?
+}
+
+\subsection{Время и история}
+
+Способы учёта истории системы и динамических характеристик.
+
+Стабильные/мобильные модели.
+
+История: локальная + глобальная
+
+
+
+
 Рассмотрим 3 подхода к определению
 точки максимума функции качества, а следовательно -- значения идентифицируемого параметра \cite{atu_st99,atu_jacs2015}.
 Первый -- реализация
@@ -230,8 +238,8 @@ $F(q_o,q_m)$.
 \begin{equation}
   p_{ge}
   =
-  \frac{\sum\limits_{i=0}^{n-1} F_{mi} p_{mi}}
-       {\sum\limits_{i=0}^{n-1} F_{mi} }
+  \frac{\sum\limits_{i=0}^{n-1} F_{i} p_{i}}
+       {\sum\limits_{i=0}^{n-1} F_{i} }
   .
   \label{atu:eq:p_ge}
 \end{equation}
@@ -244,13 +252,13 @@ $F$, а в оценке используется только ближайшая
 \begin{equation}
   p_{le}
   =
-  \frac{ F_{i_m-1} p_{i_m-1} + F_{i_m} p_{i_m} + F_{i_m+1} p_{i_m+1} }
-       { F_{i_m-1} + F_{i_m} + F_{i_m+1} }
+  \frac{ F_{i-1} p_{i_m-1} + F_{i} p_{i_m} + F_{i+1} p_{i+1} }
+       { F_{i-1}           + F_{i}         + F_{i+1}         }
   .
   \label{atu:eq:p_le}
 \end{equation}
 
-Третий подход отличается от второго тем, что по трём точкам вблизи  $M_{i_{m}}$
+Третий подход отличается от второго тем, что по трём точкам вблизи  $M_{i}$
 функция $F(p)$ аппроксимируется параболой, и абсцисса её вершины задаёт искомое
 значение параметра. Сместим начало координат в точку
 $ ( p_c, F_c ) $. Тогда
@@ -397,6 +405,33 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 неоправданной скученности агентов.
 
 \Cmt{ Заметная часть новизны планируется здесь}
+
+
+
+\subsection{Качество идентификации}
+
+\Cmt{Расширить из кандидатской с учётом времени и множества моделей.}
+
+Процесс поисковой идентификации заключается в настройке параметров одной
+или нескольких моделей, анализу критериев идентификации
+(или соответствующих функций качества), и оцениванию по этой информации
+значения идентифицируемого параметра. При использовании в целях идентификации нескольких моделей,
+появляются общие действия, применяемые к каждой из них.
+
+% TODO: Уйдёт в постановку, но не отсюда, а из второй главы
+% Рассмотрим одномерный случай.
+% Пусть задан объект $ \mathbf{O} $, и $N$ моделей:
+% $ \mathbf{M}_0 \ldots \mathbf{M}_{N-1} $.
+% На вход как объекта, так и каждой из моделей подаётся (при необходимости)
+% входной сигнал $u(t)$. Выход моделей $x_{mi}(t)$ измеряется точно,
+% а объекта $x_o(t)$ -- с определённой, наперёд неизвестной помехой $w(t)$. При необходимости искусственную помеху
+% со сходными характеристиками можно подмешивать и к выходу моделей.
+% Обозначим $q_o(t)$ -- текущее значение критерия для
+% объекта, $q_{mi}(t)$ -- для $i$-той модели.
+% Соответственно $p_o(t)$ -- значение параметра для объекта,
+% $p_{mi}(t)$ -- для $i$-той модели.
+
+
 
 
 \section{Выводы по разделу 3}
