--- a/p5/colp_testsys.tex
+++ b/p5/colp_testsys.tex
@@ -235,7 +235,7 @@ $b \in [ 0.02; 4.2 ]$
 
 На рис.~\ref{atu:f:colp_real_xzz}--\ref{atu:f:colp_model_f} предствлены как результаты реального эксперимента,
 так и данные, полученные в результате численного моделирования динамики системы (\ref{atu:eq:colp}).
-Представлены проекции аттракторов но плоскость $(x+z,z)$ (естественный вид для оциллографа),
+Представлены проекции аттракторов на плоскость $(x+z,z)$ (естественный вид для оциллографа),
 трёхмерный вид аттракторов, и спектры.
 На каждом рисунке представлено три режима: обычный, момент первого удвоения периода и хаотический режим.
 
