More biblio, more Lorenz.

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -7,9 +7,17 @@
 \section{Существующие методы идентификации нелинейных динамических систем и их свойства}
 
 
+
+
 \section{Постановка задачи исследования}
 
 Обзор он и есть обзор
+
+Козлов~\cite{kozlov_nosearch_sns} - беспоисковые.
+
+Растригин~\cite{rastr_stat_meth_search,rastr_seu,rastr_intro,rastr_adop_complex_sys,rastr_rand_search}
+
+Борцов~\cite{borcov} -- эле-мех.
 
 \section{Выводы по разделу 1}
 
