--- a/p5/chua_testsys.tex
+++ b/p5/chua_testsys.tex
@@ -8,7 +8,7 @@
 
 Одной из известных хаотических систем, легко реализуемых как модельно (\ref{atu:eq:chua}),
 так и схемотехнически (рис.~\ref{atu:f:chuascheme}),
-является нелинейная система Чуа~\cite{moon_chaotic_vibr,buga_chua}:
+является нелинейная система Чуа~\cite{moon_chaotic_vibr,buga_chua,Kennedy92robustop}:
 
 \begin{figure}[htb!]
 \begin{center}
@@ -153,7 +153,7 @@ $q_{*}(\mu) $ (индексом ``*'' будем обозначать приме
 в рабочем диапазоне.
 
 Следующим важным параметром, необходимым для эффективной работы системы идентификации, является
-характерное время время оценивания $\tau$ (\ref{atu:eq:q}), или же обратная ему величина $a_q$.
+характерное время время оценивания $\tau$ (\ref{atu:eq:qlin}), или же обратная ему величина $a_q$.
 
 Для предварительного оценивания величины $a_q$ рассмотрим спектры системы при различных
 $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графиков, спектр системы достаточно
