--- a/p5/colp_testsys.tex
+++ b/p5/colp_testsys.tex
@@ -7,7 +7,7 @@
 
 В ряде радиоэлектронных устройств используются
 генераторы сигналов, способные генерировать разнообразные виды  сигналов, в том числе
-сложно-периодические и хаотические.
+сложно-периодические и хаотические~\cite{dmitriev_gen_chaos}.
 В частности, генератор  Колпитца~\cite{kennedy_chaos_colpitts,atu_asau21}, который, в
 зависимости от условий,   может
 генерировать  колебания,  как  близкие  к  гармоническим,  так  и  проявлять
