--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -4,7 +4,10 @@
 
 \LinkRef{
   ross: ASAU-14. ISDMCI-2011, ISDMCI-2012
+  % ~/doc/tex/asau/asau14/atu/atu.tex
 }
+
+In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chuliсhcov_mm_ml_dyn}
 
 \begin{equation}
 \begin{cases}
@@ -14,6 +17,46 @@
 \end{cases}
 \label{atu:eq:rossler}
 \end{equation}
+
+Здесь \(x\), \(y\), \(z\) -- переменные состояния системы,
+которые соответствуют концентрациям основных реагентов
+в моделируемой химической системе.
+Соответственно \(a\), \(b\), \(c\) --
+параметры, определяющие динамику системы
+(в моделируемой системе определяются константами химического равновесия
+и концентрациями вспомогательных реагентов).
+
+При моделировании данной системы положим
+\(a=0.25\), \(b=1\).
+В этом случае параметр \(c\) определяет
+тип динамики системы. 
+Определение значения данного параметра и будет
+целью задачи идентификации.
+
+В данной системе нет внешнего входного сигнала \( u(t) \).
+Это объясняется тем, что за счет 
+поддержания постоянных концентраций вспомогательных
+компонент, постоянного пополнения исходных веществ
+и удаления продуктов реакции система обладает
+собственным источником энергии, который обеспечивает
+динамику системы и при отсутствии 
+внешнего воздействия.
+
+Как и другие системы хаотической динамики, система Ресслера
+не позволяет построить систему идентификации, основанную
+на формировании критерия качества идентификации 
+как меры близости непосредственных значений выходных сигналов 
+объекта \( x_0(t) \) и модели \( x_m(t) \).
+Более того, сам вид поведения данной системы может значительно изменяться
+при малых изменениях параметров, совершая переход от
+хаотического к сложно - периодическому и обратно.
+
+При малых значениях параметра (\(c \approx 2 \))
+система проявляет регулярную динамику,
+совершая колебательное движение вокруг точки неустойчивого равновесия.
+При увеличении значения параметра \(c\) происходит удвоение периода,
+поведение системы становится все более сложным, и в определенном
+диапазоне значений параметра система демонстрирует хаотическую динамику.
 
 Идентифицируемый параметр:
 $ c \in [2; 50] $, $c_0=5.88$.
