--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -1,26 +1,27 @@
 \chapter{Тестовые хаотические системы }
 
-\input{lor_testsys.tex} % unfilled, but is near to good
+\input{lor_testsys.tex}   % p5/lor_testsys.tex   % 
 
-\input{duff_testsys.tex}
+\input{spr_a_testsys.tex} % p5/spr_a_testsys.tex     % good
 
-\input{chua_testsys.tex} % good
+\input{duff_testsys.tex} % p5/duff_testsys.tex     
 
-\input{ross_testsys.tex} % ??
+\input{chua_testsys.tex} % p5/chua_testsys.tex      % good
 
-\input{vdp_testsys.tex} % ??
+\input{ross_testsys.tex} % p5/ross_testsys.tex      % ??
 
-\input{colp_testsys.tex} % good
+\input{vdp_testsys.tex} % p5/vdp_testsys.tex      % ??
 
-\input{deadvi_testsys.tex} %
+\input{colp_testsys.tex} % p5/colp_testsys.tex      % good
 
-\input{spr_a_testsys.tex} % good
+\input{deadvi_testsys.tex} % p5/deadvi_testsys.tex      %
 
-\input{fric_testsys.tex}  % good
 
-% \input{relax_testsys.tex} % no id
+\input{fric_testsys.tex} % p5/fric_testsys.tex       % good
 
-\input{vglass_testsys.tex} %
+% \input{relax_testsys.tex} % p5/relax_testsys.tex      % no id
+
+\input{vglass_testsys.tex} % p5/vglass_testsys.tex      %
 
 \section{Выводы по разделу 4}
 
