Yet more words, some moved: p2->p1

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -1345,4 +1345,16 @@
   language = "russian"
 }
 
+@Article{zadeh_id_1956,
+  author = {Zadeh, L. A},
+  title = "On the Identification Problem",
+  journal = "IRE Transactions on Circuit Theory",
+  year = 1956,
+  doi = {10.1109/TCT.1956.1086328},
+  number = {3(4)},
+  pages = {277--281},
+  language = "english"
+}
+
+
 
