--- a/p4/qontrol.tex
+++ b/p4/qontrol.tex
@@ -100,7 +100,7 @@
 
 \section{Основные подходы к } % --------------------------------------------- 
 
-\section{Выводы по разделу} % ---------------------------------------------
+\section{Выводы по разделу \thechapter} % ---------------------------------------------
 
 Створено щось непогане.
 
