--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -235,7 +235,8 @@ $\sigma_{ql}$ и $\sigma_{qa}$, представлены на
 например на микроконтроллерной платформе в реальном времени,
 нет смысла реализовывать ресурсоёмкоё скользящее среднее.
 Далее, сам вид зависимости оказался достаточно простым:
-
+$ \sigma_q \sim q a_q $ или же
+$ \frac{\sigma_q \tau_q}{q} \approx \mathrm{const}$.
 
 
 
