--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -7,7 +7,7 @@
   % ~/doc/tex/asau/asau14/atu/atu.tex
 }
 
-In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chuliсhcov_mm_ml_dyn}
+In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chulichkcov_mm_ml_dyn}
 
 \begin{equation}
 \begin{cases}
