--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -23,7 +23,7 @@
 
 \input{vglass_testsys.tex} % p5/vglass_testsys.tex      %
 
-\section{Выводы по разделу 4}
+\section{Выводы по разделу \thechapter}
 
 Выводы.
 
