--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -1,23 +1,153 @@
 \chapter{Обзор состояния проблемы и постановка задачи исследования}
 
+Обзор он и есть обзор
+
 \section{Основные понятия задачи идентификации динамических систем}
 
+Одно из первых определений задачи идентификации было дано
+Л.~Заде~\cite{zadeh_id_1956}.
+
+Определение Райбмана.
+
+Под идентификацией
+
+Определение Растригина.
+
 \section{Свойства систем хаотической динамики применительно к задаче идентификации}
+
+Одним из основных свойств систем хаотической динамики является чувствительность
+к малым возмущениям сходных сигналов, состояния системы или же параметров.
+В линейном приближении это соответствует положительным значениям
+коэффициентов Ляпунова~\cite{magni_theory_dyn_chaos,moon_chaotic_vibr}.
+
+Рисунок -- расходящиеся траектории.
 
 \section{Существующие методы идентификации нелинейных динамических систем и их свойства}
 
 
 
 
-\section{Постановка задачи исследования}
 
-Обзор он и есть обзор
+\section{Постановка задачи идентификации}
 
-Козлов~\cite{kozlov_nosearch_sns} - беспоисковые.
+Пусть задан динамический объект $ \mathbf{O}$, характеризуемый параметром $p_o(t)$.
+Информация об этом параметре может быть представлена
+различными способами. Например, может быть задан только диапазон
+$[p_{\min}, p_{\max}]$,
+возможных значений параметра,
+этот же диапазон может иметь зависимость от времени:
+$[p_{\min}(t), p_{\max}(t)]$.
+На основании априорных исследований может
+быть задана как плотность вероятности для значений параметра,
+так и зависимость этой вероятности от времени. Наличие плотности вероятности
+позволяет использовать информационные оценки идентификации~\cite{info_cipkin,atu_asau10},
+но не является необходимым условием для синтеза системы идентификации в целом.
+Более того, для получения достаточно точных информационных оценок
+требуется затратить значительно больше ресурсов на проведение моделирования,
+чем на собственно идентификацию.
+Также могут быть заданы дополнительные ограничения, такие как максимальна скорость
+изменения параметра и т.д.
+
+Пусть также существует конечное множество моделей
+$\mathbf{M}_i$. Структура моделей предполагается известной и одинаковой,
+а параметру объекта $p_o(t)$ соответствуют параметры моделей $p_{i}(t)$.
+
+На вход как моделей, так и объекта подаётся входной сигнал $u(t)$.
+Частный случай, когда ни объект, ни модели не требуют входного сигнала
+не нарушает общности постановки. В некоторых случаях
+не следует пренебрегать ошибкой измерения входного сигнала $w_u(t)$,
+однако, при анализе динамики систем идентификации в целом,
+этой величиной, как правило, пренебрегают.
+
+В общем случае $u(t)$, $x(t)$, $p(t)$ -- векторные величины.
+В тех случаях, когда размерность $x(t)$ не выше трёх,
+компоненты этого вектора будем обозначать соответственно $x(t)$, $y(t)$, $z(t)$.
+
+Выходные сигналы моделей
+$x_i(t)$ считаем известными точно, так как ошибки
+представления значений при численных вычислениях заведомо
+пренебрежимо малы с точностью измерений. Напротив,
+выход объекта $x_{op}(t)$ считаем измеренным
+с определённой ошибкой измерения $w(t)$:
+%
+\[
+  x_o(t) = x_{op}(t) + w(t).
+\]
+%
+Сигнал $w(t)$ обычно задаётся как случайный сигнал с
+известным видом распределения, а также параметрами этого распределения,
+например, нормальное распределения с среднеквадратичным отклонением $\sigma_w$
+и характерным временем автокорреляции $\tau_w$.
+При моделировании процессов измерения внешних сигналов в помощью АЦП может потребоваться
+более сложное представление:
+%
+\[
+  x_o(t) = W( x_{op}(t) + w(t) ).
+\]
+%
+Данный способ определения $x_o(t)$ необходим в тех случаях,
+когда надо отобразить при моделировании тот факт,
+что данный сигнал принимает фиксированный набор значений, определяемый разрядностью АЦП.
+
+Временные ограничения на работу системы идентификации могут быть заданы
+следующими способами. В простейшем случае, значение $p_o$
+считается постоянным, но ограничено полное время измерения $T$.
+В противном случае задаются ограничения на динамику $p_o(t)$.
+Распространённые способы:
+
+a) ограничение производной:
+%
+\begin{equation}
+  \left| \od{p_o(t)}{t} \right| < d_{p,\max}.
+  \label{atu:eq:p_lim_diff}
+\end{equation}
+Самый простой метод, но имеет ограниченное применение в реальных
+задачах, так как резкие изменение значений параметра,
+связанные с переключениями состояния или режимов работы системы,
+выходом из строя элементов системы на дают возможности корректно ограничить
+величину  $d_{p,\max}$. С другой стороны, такие изменения
+происходят достаточно редко, и этот факт не отражает ограничение (\ref{atu:eq:p_lim_diff}).
+
+b) ограничение длины кривой $p_o(t)$ на любом из интервалов времени $[t,t+\Delta t]$:
+\begin{equation}
+  \int\limits_{t}^{t+\Delta t} \sqrt{1 + \left( \od{p_o(t)}{t} \right)^2 } \, \mathrm{d}t < l_{p,\max}.
+  \label{atu:eq:p_lim_l}
+\end{equation}
+%
+Это ограничение выглядит несколько искусственным,
+но оно, с одной стороны, вводит ограничение на возможные изменения $p_o(t)$,
+и с другой стороны, не ограничивает резкие изменения параметра в отдельных областях.
+
+c) упрощённая форма варианта b) -- ограничение длины проекции  $p_o(t)$ на ось $p$:
+\begin{equation}
+  \int\limits_{t}^{t+\Delta t} \left| \od{p_o(t)}{t} \right | \, \mathrm{d}t < l_{pl,\max}.
+  \label{atu:eq:p_lim_pl}
+\end{equation}
+
+Целью задачи идентификации будем считать нахождение
+такого сигнала $p_m(t)$, для которого
+отличие $q_m(t)$ от $q_o(t)$ минимально.
+Понятие ``отличие'', как и вид критерия $q$, определяется исходной задачей.
+
+
+
+
+
+Козлов~\cite{kozlov_nosearch_sns} -- беспоисковые.
 
 Растригин~\cite{rastr_stat_meth_search,rastr_seu,rastr_intro,rastr_adop_complex_sys,rastr_rand_search}
 
 Борцов~\cite{borcov} -- эле-мех.
 
-\section{Выводы по разделу 1}
+\section{Постановка задачи исследования}
+
+Критерии.
+
+Методы.
+
+Средства моделирования и измерения.
+
+Проверка адекватности.
+
+\section{Выводы по разделу \thechapter}
 
