--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -4,7 +4,7 @@ Qdd
 
 Методы расчёта~\cite{zaeplnii_radio_calc}.
 
-\section{Выводы по разделу 6}
+\section{Выводы по разделу \thechapter}
 
 Выводы.
 
